# mina-multi-sig

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  DOC-WORKFLOW.md  O1JS-WORKFLOW.md  README.md  SIGNING-WORKFLOW.md
.claude/agents/: rust-audit-scoper.md
.docker/: frost-ci.Dockerfile
.github/: dependabot.yml
.github/workflows/: build-ci-image.yml  client-commands.yml  compat-matrix.yml  docs.yml  rust.yml  shell.yaml
audits/: mina-multi-sig-audit-rfp.md
frost-bluepallas/: Cargo.toml  README.md
frost-bluepallas/examples/: dkg.rs  graphql-broadcast.rs  mina-gen-pubkey.rs  mina-sign-tx.rs  sign.rs
frost-bluepallas/examples/_shared/: types.rs
frost-bluepallas/src/: base58.rs  errors.rs  graphql.rs  hasher.rs  helper.rs  keys.rs  lib.rs  mina_compat.rs  negate.rs  pallas_message.rs  signature.rs  signing_utilities.rs  transactions.rs  translate.rs
frost-bluepallas/src/keys/: dkg.rs
frost-bluepallas/src/transactions/: generic_tx.rs  legacy_tx.rs  mina_schema.graphql  mod.rs  network_id.rs  network_id_serde.rs  transaction_zkapp.rs  zkapp.rs  zkapp_struct.rs  zkapp_trait.rs  zkapp_tx.rs
frost-bluepallas/src/transactions/zkapp_tx/: commit.rs  constants.rs  hash.rs  hashable.rs  packing.rs  sign_zkapp.rs  signature_injection.rs  test_vectors.rs  zkapp_display.rs  zkapp_emptiable.rs  zkapp_graphql.rs  zkapp_hashable.rs  zkapp_packable.rs  zkapp_serde.rs  zkapp_test_vectors.rs  zkapp_trait.rs
frost-bluepallas/src/transactions/zkapp_tx/packing/: emptiable.rs  mod.rs  packable.rs  packed_input.rs
frost-bluepallas/tests/: common_traits_tests.rs  deserialize.rs  frost-bluepallas.rs  gen_test_vectors.rs  graphql_tests.rs  helper.rs  integration_tests.rs  interoperability_tests.rs  mina_compatibility.rs  mod.rs  recreation_tests.rs  rerandomized_tests.rs  serde_tests.rs  serialization_pbt.rs  serialization_tests.rs  test_lib.rs
frost-bluepallas/tests/data/: payment-zkapp.json  tx-2026-01-06T18-06-16-703Z.json
frost-bluepallas/tests/data/graphql/: delegation_graphql.json  zkapp_signed.json
frost-bluepallas/tests/helpers/: mod.rs  samples.rs  types.rs  vectors-big-identifier.json  vectors.json
frost-bluepallas/tests/mina_tests/: mina_compatibility.rs  mod.rs  signer.rs  transactions.rs
frost-bluepallas/tests/snapshots/: serialization_tests__check_key_package_postcard_serialization.snap  serialization_tests__check_public_key_package_postcard_serialization.snap  serialization_tests__check_round1_package_postcard_serialization.snap  serialization_tests__check_round1_secret_package_postcard_serialization.snap  serialization_tests__check_round2_package_postcard_serialization.snap  serialization_tests__check_round2_secret_package_postcard_serialization.snap  serialization_tests__check_secret_share_postcard_serialization.snap  serialization_tests__check_signature_share_postcard_serialization.snap  serialization_tests__check_signing_commitments_postcard_serialization.snap  serialization_tests__check_signing_nonces_postcard_serialization.snap  serialization_tests__check_signing_package_postcard_serialization.snap
frost-client/: Cargo.toml  README.md
frost-client/examples/: .gitignore  README.md  integration-tests.rs
frost-client/src/: api.rs  lib.rs  main.rs  network.rs  test_vector_gen.rs
frost-client/tests/: integration-tests.rs
frost-pallas/: Cargo.toml
frost-pallas/src/: lib.rs
frost-pallas/tests/: test_lib.rs
issues/: frost-core-verify-signature-share-missing-pre-commitment.md
mina-frost-client/: Cargo.toml  README.md
mina-frost-client/examples/: .gitignore  README.md
mina-frost-client/examples/dkg_example/: dkg_example.sh
mina-frost-client/examples/graphql_example/: graphql_example.sh
mina-frost-client/examples/helpers/: file_generation.sh  init_frostd.sh  use_frost_client.sh
mina-frost-client/examples/signing_example/: message.json  signing_example.sh
mina-frost-client/examples/trusted_dealer_example/: trusted_dealer_example.sh
mina-frost-client/src/: api.rs  cipher.rs  lib.rs  main.rs  mina_network.rs  session.rs
mina-frost-client/src/cli/: args.rs  ciphersuite_helper.rs  config.rs  coordinator.rs  graphql.rs  mod.rs  participant.rs  session.rs  write_atomic.rs
mina-frost-client/src/coordinator/: comms.rs  config.rs  coordinate_signing.rs  mod.rs
mina-frost-client/src/coordinator/comms/: http.rs
mina-frost-client/src/dkg/: comms.rs  config.rs  keygen.rs
mina-frost-client/src/dkg/comms/: http.rs
mina-frost-client/src/participant/: comms.rs  config.rs  sign.rs
mina-frost-client/src/participant/comms/: http.rs
mina-frost-client/src/scripts/: test_vector_gen.rs
mina-frost-client/src/trusted_dealer/: mod.rs
mina-frost-client/src/trusted_dealer/tests/: helpers.rs  integration_tests.rs
mina-frost-client/tests/: compat_pre_to_mesa.rs  duplicate_participant.rs  helpers.rs  integration-tests.rs
mina-frost-client/tests/assets-duplicate/: 0.toml  1.toml  2.toml  localhost+2-key.pem  localhost+2.pem  signature.json
mina-tx/: Cargo.toml  README.md
mina-tx/scripts/: .gitignore  json_to_zkapp_mapper.py
mina-tx/src/: base58.rs  bluepallas_compat.rs  errors.rs  graphql.rs  lib.rs  pallas_message.rs  signatures.rs  transactions.rs
mina-tx/src/transactions/: legacy_tx.rs  network_id.rs  zkapp_tx.rs
mina-tx/src/transactions/zkapp_tx/: commit.rs  constants.rs  packing.rs  signature_injection.rs  zkapp_display.rs  zkapp_graphql.rs  zkapp_serde.rs  zkapp_test_vectors_mesa.rs
mina-tx/src/transactions/zkapp_tx/test_vectors/: common.rs  mesa.rs  mod.rs  pre_mesa.rs
mina-tx/tests/: graphql_tests.rs
mina-tx/tests/data/: deploy-contract.json  deploy-v0.0.4-unsigned.json  deploy-v0.0.6-admin-signed.json  tx-2026-01-06T18-06-16-703Z.json  update-state.json
mina-tx/tests/data/graphql/: delegation_signed.json  payment_graphql.json  payment_signed.json  zkapp_graphql.json  zkapp_graphql_mesa.json  zkapp_signed_mesa.json
mina-tx/tests/mina_tests/: mina_compatibility.rs  mod.rs  signer.rs
scripts/: .gitignore  array_compare.py  json_to_zkapp_mapper.py  zkapp.json  zkapp.rs
(+70 files in other folders)
