[workspace]
resolver = "2"
members = ["frost-bluepallas"]

[workspace.dependencies]
frost-core = { version = "2.1.0", features = ["internals"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems.git", rev = "15139e422f" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems.git", rev = "15139e422f" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems.git", rev = "15139e422f" }
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
num-traits = "0.2.19"
