[workspace]
members = ["frost-bluepallas", "frost-client"]
resolver = "2"

[workspace.dependencies]
frost-core = { version = "2.1.0", features = ["internals"] }
frost-rerandomized = "2.1.0"
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", rev = "90798a4" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", rev = "90798a4" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", rev = "90798a4" }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
num-traits = "0.2.19"
async-trait = "0.1.85"
bech32 = "0.11.0"
clap = "4.5.23"
dirs = "5.0.1"
eyre = "0.6.12"
frost-ed25519 = "2.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
halo2_gadgets = "0.3.0"
halo2_proofs = "0.3.0"
hex = "0.4.3"
insta = "1.43.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
message-io = "0.18"
postcard = "1.1.1"
rand = "0.8.5"
rand_core = "0.6.4"
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "ed49e9ca0699a6450f6d4a9fe62ff168f5ea1ead" }
reqwest = { version = "0.12.12", default-features = false }
rpassword = "7.3.1"
serde = "1.0.204"
serde_json = "=1.0.109"
serdect = "0.3.0"
snow = "0.9.6"
stable-eyre = "0.2"
tempfile = "3.16.0"
thiserror = "2.0.11"
tokio = "1.42"
toml = "0.8.19"
uuid = "1.11.0"
xeddsa = "1.0.2"
zeroize = "1.8.1"
