[workspace]
members = ["frost-bluepallas", "mina-frost-client"]
resolver = "2"

[workspace.dependencies]
frost-core = { version = "3.0.0-rc.0", features = ["internals"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }

ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
num-traits = "0.2.19"
async-trait = "0.1.85"
bech32 = "0.11.0"
clap = "4.5.23"
dirs = "5.0.1"
eyre = "0.6.12"
hex = "0.4.3"
insta = "1.43.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
postcard = "1.1.3"
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
serde = "1.0.204"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serdect = "0.4.2"
snow = "0.9.6"
stable-eyre = "0.2"
tempfile = "3.16.0"
thiserror = "2.0.11"
tokio = "1.42"
toml = "0.8.19"
uuid = "1.11.0"
xeddsa = "1.0.2"
zeroize = "1.8.1"
