[package]
name = "frost-bluepallas"
version = "0.2.0"
edition = "2021"
rust-version = "1.92"

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
bitvec = "1.0.1"
frost-core.workspace = true
mina-curves.workspace = true
mina-hasher.workspace = true
mina-signer.workspace = true
mina-poseidon.workspace = true

num-bigint = "0.4.6"
num-traits.workspace = true
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
lazy_static.workspace = true
bs58 = "0.5.1"
sha2 = "0.10"

[dev-dependencies]
frost-core = { version = "3.0.0-rc.0", features = ["test-impl", "internals"] }
lazy_static.workspace = true
serde_json.workspace = true
insta.workspace = true
hex.workspace = true
rand_chacha = "0.9"
bs58 = "0.5.1"
reqwest = { workspace = true, features = ["blocking"] }
# Use test-utils feature as dev dependency, this enables sharing test vectors
# across unit tests and integration tests
frost-bluepallas = { path = ".", features = ["test-utils"] }

[features]
default = ["serialization"]
#! ## Features
## Enable `serde` support for types that need to be communicated. You
## can use `serde` to serialize structs with any encoder that supports
## `serde` (e.g. JSON with `serde_json`).
serde = ["frost-core/serde"]
## Enable a default serialization format. Enables `serde`.
serialization = ["serde", "frost-core/serialization"]
test-utils = []
