[package]
name = "mina-frost-client"
version = "0.2.0"
edition = "2021"
default-run = "mina-frost-client"

[[bin]]
name = "test-vector"
path = "src/scripts/test_vector_gen.rs"

[[bin]]
name = "mina-frost-client"
path = "src/main.rs"

[dependencies]
frost-bluepallas = { path = "../frost-bluepallas" }

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
serde = { workspace = true, features = ["derive"] }
snow = { workspace = true }
toml = { workspace = true }
eyre = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serdect = { workspace = true }
bech32 = { workspace = true }
postcard = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
frost-core = { workspace = true, features = ["serde"] }
rand = { workspace = true }
stable-eyre = { workspace = true }
itertools = { workspace = true }
xeddsa = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["serde", "zeroize_derive"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
rand_core = { workspace = true }

[dev-dependencies]
regex.workspace = true
lazy_static.workspace = true
mina-signer.workspace = true
ark-ff.workspace = true
