[package]
name = "mina-tx"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"

[dependencies]
frost-bluepallas = { path = "../frost-bluepallas" }
frost-core.workspace = true
ark-ec.workspace = true
mina-curves.workspace = true
mina-hasher.workspace = true
mina-signer.workspace = true
mina-poseidon.workspace = true
ark-ff.workspace = true
num-traits.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bs58 = "0.5.1"
sha2 = "0.10"
bitvec = "1.0.1"
lazy_static.workspace = true
num-bigint = "0.4.6"

[dev-dependencies]
rand_chacha = "0.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
hex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }

[features]
default = []
test-utils = []
